# ba_api

./: .gitignore  Cargo.toml  README.md  config.yml  websocket推送订单状态变化.md
examples/: for_test.rs  rate_limit.rs  rest_kline.rs  test.rs  websocket_account.rs
src/: base.rs  coin.rs  config.rs  errors.rs  lib.rs
src/client/: account.rs  helper.rs  market_data.rs  mod.rs  params.rs  rate_limit.rs  rest.rs  rest_response.rs  signature.rs  spot_account_trade.rs  sub_account.rs  wallet.rs  websocket.rs  websocket2.rs  ws_response.rs
src/misc/: mod.rs  some_types.rs
src/types/: account.rs  depth.rs  kline.rs  kline_interval.rs  mod.rs  order.rs  other_types.rs  rate_limit.rs  sub_account.rs  symbol_info.rs  ticker.rs  wallet.rs  ws_response.rs
src/utils/: account_ext.rs  datetime_east8.rs  float64_ext.rs  kline_ext.rs  mod.rs  symbol_ext.rs
