[package]
name = "ba_api"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "socks"] }
ring = { version = "0.16" }
tokio = { version = "1.21", features = ["net", "macros", "fs"] }
tokio-tungstenite = { version = "0.16", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"
tracing = "0.1"
serde_urlencoded = "0.7"
futures-util = "0.3"
chrono = "=0.4.22"

[dev-dependencies]
tokio = { version = "1.21", features = ["full", "tracing"] }
tracing-subscriber = "0.3"
dashmap = "5.4"

[lib]
doctest = false
